--- a/index.html
+++ b/index.html
@@ -1,55 +1,39 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<title>3D Multiplayer</title>
-<style>
-body {
-  margin: 0;
-  overflow: hidden;
-  background: #87ceeb;
-  font-family: Arial;
-}
-
-#chat {
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
-  width: 260px;
-  height: 300px;
-  background: rgba(0,0,0,0.6);
-  color: white;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  z-index: 10;
-}
-
-#messages {
-  flex: 1;
-  overflow-y: auto;
-  border: 1px solid #444;
-  padding: 5px;
-  margin-bottom: 5px;
-  font-size: 14px;
-}
-
-#input {
-  width: 100%;
-  padding: 5px;
-  box-sizing: border-box;
-}
-</style>
+  <meta charset="UTF-8" />
+  <title>3D Multiplayer Game</title>
+  <style>
+    body { margin: 0; overflow: hidden; font-family: Arial; }
+    #ui {
+      position: fixed;
+      right: 10px;
+      bottom: 10px;
+      width: 260px;
+      background: rgba(0,0,0,0.6);
+      padding: 10px;
+      color: white;
+      border-radius: 8px;
+    }
+    #chat {
+      height: 150px;
+      overflow-y: auto;
+      font-size: 13px;
+      margin-bottom: 5px;
+    }
+    input { width: 100%; padding: 5px; }
+  </style>
 </head>
 <body>
 
-<div id="chat">
-  <div id="messages"></div>
-  <input id="input" placeholder="Mesaj yaz ve Enter'a bas" />
+<div id="ui">
+  <input id="username" placeholder="Kullanıcı adın" />
+  <div id="chat"></div>
+  <input id="chatInput" placeholder="Mesaj yaz..." />
 </div>
 
-<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158/build/three.min.js"></script>
+<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
 <script src="game.js"></script>
 
 </body>
